# Radiation_Shielding

./: Dockerfile  docker-compose.yml
api/: database.py  main.py  models.py
ml/: data_loader.py  model.py  requirements.txt
scripts/: generate_dataset.py
shield-lite/: .gitignore  CMakeLists.txt  CPP_MONTE_CARLO_README.md  QUICK_START_CPP.md  README.md  build_cpp.sh  pyproject.toml
shield-lite/examples/: config.yaml  example_monte_carlo.py  example_oop.py  example_usage.py  materials.csv
shield-lite/src/shield_lite/: __init__.py  __main__.py  cli.py
shield-lite/src/shield_lite/core/: __init__.py  dose.py  mass.py  monte_carlo.py  shield.py
shield-lite/src/shield_lite/cpp/: bindings.cpp  monte_carlo.cpp  photon_transport.cpp  photon_transport.h
shield-lite/src/shield_lite/optimization/: calibration.py  grid_search.py  moindre_carré.py
shield-lite/src/shield_lite/visualization/: plots.py
shield-lite/tests/: test_calibration.py  test_cli.py  test_dose.py  test_grid_search.py  test_mass.py  test_monte_carlo.py
