[tool.poetry]
name = "shield-lite"
version = "0.1.0"
description = "A minimal project for designing a multi-layer shield against a mono-energetic gamma source."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/shield-lite"
repository = "https://github.com/yourusername/shield-lite"
keywords = ["gamma", "shielding", "radiation", "dose", "mass", "optimization"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
numpy = "^1.21.0"
matplotlib = "^3.4.0"
scipy = "^1.7.0"
pandas = "^1.3.0"
pybind11 = "^2.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
pytest-cov = "^2.12.0"
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"